--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@ Summary:
 - Переполнение
     - использовать минимальную и максимальную высоту вместо просто высоты
     - flex-wrap
-- Гриды
++ Гриды
 + изменить padding у select-элемента: скрывает часть текста
 - сделать состояния
   - каталог
@@ -20,14 +20,14 @@ Summary:
     - бегунки range-элемента
     + кнопка "примерить"
     + кнопка "сбросить"
-  - модальное окно
+  + модальное окно
     + кнопка "закрыть"
     + поля даты
-    - валидация
+    + валидация
     + кнопки "добавить", "убавить"
-    - tooltip про детей
+    + tooltip про детей
     + кнопка "найти"
-- расположить элементы модального окна
++ расположить элементы модального окна
 - дописать range-элемент
 + outline при фокусе НЕ УБИРАТЬ!
   + заменить бордеры на outline
@@ -58,13 +58,13 @@ Summary:
 /*
 7.24. Постройте мелкие сетки на гридах для подходящих компонентов (https://up.htmlacademy.ru/htmlcss/35/tasks/12, 20 октября)
 
-- В форке вашего проекта создайте сетку на гридах для компонентов, которым это подходит, например:
++ В форке вашего проекта создайте сетку на гридах для компонентов, которым это подходит, например:
   - товары в каталоге или
-  - формы с несколькими полями.
+  + формы с несколькими полями.
 
-- Чтобы линия занимала всю строку, используйте значение для шаблона 1 / -1.
-- Если это потребуется, используйте min-content для сужения грид-ячейки по контенту.
-- Масштабируйте картинки карточек товара с помощью object-fit.
++ Чтобы линия занимала всю строку, используйте значение для шаблона 1 / -1.
++ Если это потребуется, используйте min-content для сужения грид-ячейки по контенту.
++ Масштабируйте картинки карточек товара с помощью object-fit.
 */
 
 /*
@@ -77,7 +77,7 @@ Summary:
   + подключены все шрифты, указанные в макете и техническом задании;
   + размеры и начертание текста соответствуют макету и техническому заданию;
   + подключены все изображения, размеры и расположение по макету;
-  - свёрстаны состояния элементов из стайлгайда.
+  + свёрстаны состояния элементов из стайлгайда.
 При работе с изображениями стоит руководствоваться следующим правилом:
   + если изображение является контентным, то такое изображение должно быть добавлено с помощью тега <img> с заполненным атрибутом alt;
   + если изображение является декоративным, то такое изображение должно быть добавлено с помощью свойства background-image.
@@ -88,7 +88,7 @@ Summary:
 
 - Сверстайте все оставшиеся компоненты, которые ещё не свёрстаны на ваших страницах:
   + Модальные окна
-  - стилизация модального окна
+  + стилизация модального окна
   + Поповеры
   + Формы
   + Слайдеры
@@ -330,16 +330,26 @@ input {
   justify-content: center;
   background: none;
 }
-.main-nav .search-button::before,
+.main-nav .search-button:hover::after,
+.main-nav .favorite:hover::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #756257;
+}
+.main-nav .search-button::before {
+  content: "";
+  height: 20px;
+  width: 20px;
+  background: url("../images/icons-common.svg") -60px 0 no-repeat;
+}
 .main-nav .favorite::before {
   content: "";
   height: 20px;
   width: 20px;
-}
-.main-nav .search-button::before {
-  background: url("../images/icons-common.svg") -60px 0 no-repeat;
-}
-.main-nav .favorite::before {
   background: url("../images/icons-common.svg") -80px 0 no-repeat;
 }
 .main-nav .favorite .notifications {
@@ -1002,8 +1012,13 @@ input {
     no-repeat;
 }
 .view-order:hover,
-.view-order:focus {
+.view-order:focus-visible {
   outline-color: var(--color-button-second-hover);
+}
+@supports not selector(:focus-visible) {
+  .view-order:focus {
+    outline-color: var(--color-button-second-hover);
+  }
 }
 .view-order:active {
   outline-color: var(--color-form-input);
@@ -1033,8 +1048,13 @@ input {
   align-items: center;
   justify-content: center;
 }
-.view-format button:focus {
+.view-format button:focus-visible {
   outline-color: var(--color-icon-second-hover);
+}
+@supports not selector(:focus-visible) {
+  .view-format button:focus {
+    outline-color: var(--color-icon-second-hover);
+  }
 }
 .view-format button:hover,
 .view-format button:active {
@@ -1246,7 +1266,8 @@ input {
 .modal-window .overlay {
   height: 100%;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: var(--color-form-element-2);
+  opacity: 80%;
 }
 .modal-window form {
   width: 717px;
@@ -1255,15 +1276,17 @@ input {
   box-sizing: border-box;
   position: absolute;
 
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: 100px 96px 96px 96px 60px;
+  grid-template-columns: 247px 88px 242px;
 
   background-color: white;
   box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
   border-radius: 30px;
 }
 .modal-window h2 {
-  margin: 0 0 64px;
+  margin: 0 0 auto;
+  grid-column: 1 / -1;
 }
 
 /*кнопка закрытия формы*/
@@ -1307,6 +1330,25 @@ input {
 }
 
 /*поля ввода*/
+.modal-window fieldset {
+  grid-column: 1 / -1;
+  border: none;
+  margin: 0;
+  padding: 0;
+
+  display: grid;
+  grid-template-rows: 48px 48px;
+  grid-template-columns: 137px auto;
+  align-items: center;
+}
+.modal-window fieldset.count-adults {
+  grid-column: 1/2;
+}
+.modal-window fieldset.count-children {
+  grid-column: 3/4;
+  grid-template-columns: 131px auto;
+  position: relative;
+}
 .modal-window h3 {
   /*font*/
   color: var(--color-text-basic);
@@ -1316,48 +1358,53 @@ input {
   text-transform: capitalize;
   margin: 0 0 0 0;
 }
-.modal-window fieldset {
-  border: none;
-  margin: 0;
-  padding: 0;
-}
 .modal-window input::placeholder {
   color: var(--color-text-basic);
   opacity: 60%;
 }
 
 /*поля даты*/
-/*в рамках данного курса не буду кастомизировать элемент,
-оставлю теневой dom без изменений*/
-.modal-window input[type="date"] {
+/*в рамках данного курса не буду кастомизировать элемент*/
+/*изменила его на text, чтобы было как в макете*/
+/* .modal-window input[type="date"] { */
+.modal-window input[type="text"] {
   height: 48px;
   padding: 12px 20px;
   box-sizing: border-box;
+  grid-column: 2/-1;
+  font-weight: 700;
 
-  background-color: var(--color-form-element-2);
+  /* background-color: var(--color-form-element-2); */
   border: none;
-  -webkit-datetime-edit-text: ".";
+  /* -webkit-datetime-edit-text: "."; */
+  background: url("../images/icons-common-calendar.svg") right 20px center
+      no-repeat,
+    var(--color-form-element-2);
 }
-.modal-window input[type="date"]::-webkit-calendar-picker-indicator {
+/* .modal-window input[type="date"]::-webkit-calendar-picker-indicator {
   width: 20px;
   height: 20px;
   box-sizing: border-box;
   background: url("../images/icons-common.svg") -100px 0 no-repeat;
-}
-.modal-window input[type="date"]:hover {
+} */
+/* .modal-window input[type="date"]:hover { */
+.modal-window input[type="text"]:hover {
   background-color: var(--color-form-element-2-hover);
 }
-.modal-window input[type="date"]:focus-visible {
+/* .modal-window input[type="date"]:focus-visible { */
+.modal-window input[type="text"]:focus-visible {
   background-color: var(--color-form-element-2-hover);
   outline: 3px solid #83b3d3;
 }
 @supports not selector(:focus-visible) {
-  .modal-window input[type="date"]:focus {
+  /* .modal-window input[type="date"]:focus { */
+  .modal-window input[type="text"]:focus {
     background-color: var(--color-form-element-2-hover);
     outline: 3px solid #83b3d3;
   }
 }
-.modal-window input[type="date"]:active {
+/* .modal-window input[type="date"]:active { */
+.modal-window input[type="text"]:active {
   background-color: var(--color-form-element-2);
   outline: 2px solid #000000;
 }
@@ -1369,6 +1416,7 @@ input {
   /* width: 111px; */
   padding: 14px 10px;
   box-sizing: border-box;
+  grid-column: 2/-1;
   display: flex;
 
   background-color: var(--color-form-element-2);
@@ -1436,43 +1484,69 @@ input {
 }
 
 /*валидация полей и подсказки*/
-.modal-window .verification {
+.modal-window .verification,
+.modal-window .error {
+  grid-column: 2/-1;
+  align-self: start;
+  margin: 4px 20px;
   font-size: 16px;
   line-height: 21px;
-  color: #ff5757;
 }
 .modal-window .error {
-  font-size: 16px;
-  line-height: 21px;
+  color: #ff5757;
+}
+.modal-window .count-children-lable {
+  display: flex;
+}
+.modal-window .tooltip {
+  width: 26px;
+  height: 26px;
+  margin: 0 10px 0;
 }
 .modal-window .info {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  background: url("../images/icons-common.svg") -220px 0 no-repeat,
+  /* position: absolute; */
+  width: 26px;
+  height: 26px;
+  display: block;
+  background: url("../images/icons-common-info.svg") 3px 3px no-repeat,
     var(--color-icon-second);
   border-radius: 50%;
 }
-.tooltip {
+.modal-window .tooltip-text {
   display: none;
   position: absolute;
-  padding: 15px 18px 18px 22px;
   width: 256px;
+  margin-left: -119px;
+  margin-top: 15px;
+  padding: 20px 18px 23px 22px;
+  box-sizing: border-box;
 
   background: var(--color-text-second);
   border-radius: 10px;
+  box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3);
   color: var(--color-text-background-default);
   font-size: 16px;
   line-height: 20px;
 }
-.modal-window .info:hover + .tooltip,
-.modal-window .info:focus-visible + .tooltip {
+.modal-window .tooltip-text::after {
+  content: "";
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -10px;
+  border-width: 9px;
+  border-style: solid;
+  border-color: transparent transparent var(--color-text-second) transparent;
+}
+.modal-window .info:hover + .tooltip-text,
+.modal-window .info:focus-visible + .tooltip-text {
   display: block;
 }
 
 /*кнопка "найти"*/
 .find-modal-window {
   height: 60px;
+  grid-column: 1/-1;
   border-radius: 10px;
 
   font-size: 20px;
