--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,7 +59,7 @@ Summary:
 7.24. Постройте мелкие сетки на гридах для подходящих компонентов (https://up.htmlacademy.ru/htmlcss/35/tasks/12, 20 октября)
 
 + В форке вашего проекта создайте сетку на гридах для компонентов, которым это подходит, например:
-  - товары в каталоге или
+  + товары в каталоге или
   + формы с несколькими полями.
 
 + Чтобы линия занимала всю строку, используйте значение для шаблона 1 / -1.
@@ -918,12 +918,54 @@ input {
 }
 .price-range .double-range {
   height: 20px;
-  box-sizing: border-box;
   margin-top: 36px;
-  padding: 8px 0;
   position: relative;
-
-  background-color: var(--color-text-background-small);
+}
+.price-range .selected-range {
+  width: 79%;
+  height: 100%;
+  position: relative;
+}
+.price-range .double-range::before,
+.price-range .selected-range::before {
+  content: "";
+  position: absolute;
+  top: 8px;
+  height: 4px;
+  width: 100%;
+  background-color: var(--color-background-basic-1);
+}
+.price-range .double-range::before {
+  opacity: 0.3;
+}
+.price-range .range-start,
+.price-range .range-end {
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  background-color: var(--color-background-basic-1);
+  border-radius: 5px;
+  top: 0;
+}
+.price-range .range-start {
+  left: 0;
+}
+.price-range .range-end {
+  right: 0;
+}
+.price-range .range-start:hover,
+.price-range .range-end:hover {
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+}
+.price-range .range-start:focus-visible,
+.price-range .range-end:focus-visible {
+  outline: 3px solid #83b3d3;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+}
+.price-range .range-start:active,
+.price-range .range-end:active {
+  outline: 2px solid #83b3d3;
+  box-shadow: 0px 7px 15px rgba(0, 0, 0, 0.4);
 }
 .filter .buttons {
   width: 191px;
@@ -987,15 +1029,15 @@ input {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 40px;
+  margin: 2px 0 42px;
 }
 .view-options h2 {
   flex-grow: 1;
 }
 .view-order {
-  height: 49px;
-  width: 292px;
-  margin-right: 62px;
+  height: 45px;
+  width: 288px;
+  margin-right: 64px;
   padding: 0 20px;
 
   font-family: "PTSans", Arial, Helvetica, sans-serif;
@@ -1035,14 +1077,14 @@ input {
   align-self: flex-start;
 }
 .view-format button {
-  height: 48px;
-  width: 48px;
-  margin-left: 8px;
+  height: 44px;
+  width: 44px;
+  margin: 0 2px 0 10px;
 
   background: none;
   outline: 2px solid var(--color-form-element-1);
   border: none;
-  border-radius: 4px;
+  border-radius: 2px;
 
   display: flex;
   align-items: center;
@@ -1080,47 +1122,61 @@ input {
 
 /*cards*/
 .cards {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-  margin: -10px;
-  margin-bottom: 70px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin: -1px;
+  gap: 18px;
+  margin-bottom: 79px;
+  position: relative;
+}
+.cards::after {
+  content: "";
+  position: absolute;
+  bottom: -40px;
+  height: 1px;
+  width: 100%;
+  background-color: var(--color-form-element-2-hover);
 }
 /*card*/
 .card {
   border: 1px solid #e6e6e6;
   border-radius: 4px;
-  width: 300px;
-  height: 398px;
-  margin: 9px;
   padding: 20px;
 
-  display: flex;
-  flex-flow: row wrap;
-  align-content: flex-start;
-  justify-content: space-between;
+  display: grid;
+  grid-template:
+    "img img" 212px
+    "header header" 28px
+    "type price" 21px
+    "detail favorite" 36px
+    "rating rating" 37px / 1fr 1fr;
+  gap: 16px 20px;
+}
+.card img {
+  grid-area: img;
+  object-fit: contain;
 }
 .card h3 {
-  width: 100%;
-  margin: 16px 0 0;
+  grid-area: header;
+  margin: 0;
   text-transform: none;
 }
 .card p {
-  width: 140px;
-  margin: 16px 0 0;
+  margin: 0;
   font-family: "PTSans", Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
 }
+.card .type {
+  grid-area: type;
+}
 .card .price {
+  grid-area: price;
   text-align: right;
 }
-.card button {
-  width: 140px;
-  margin: 16px 0 0;
-}
 .card .detail {
+  grid-area: detail;
   background-color: var(--color-button-basic);
 }
 .card .detail:hover,
@@ -1132,6 +1188,7 @@ input {
   color: var(--color-text-background-small);
 }
 .card .favorite {
+  grid-area: favorite;
   background-color: var(--color-button-second);
 }
 .card .favorite:hover,
@@ -1160,17 +1217,13 @@ input {
   color: var(--color-text-background-default);
 }
 .card .rating {
-  width: 300px;
-  height: 37px;
-  margin: 16px 0 0;
+  grid-area: rating;
 
   display: flex;
   justify-content: space-between;
 }
 .rating span {
   width: 140px;
-  /* height: 37px; */
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1184,7 +1237,7 @@ input {
 }
 .rating::before {
   content: "";
-  width: 1px;
+  width: 0;
   background: url("../images/icons-common-star.svg") -1px 9px repeat-x;
 }
 .rating.stars-5::before {
@@ -1275,18 +1328,22 @@ input {
   padding: 64px 70px;
   box-sizing: border-box;
   position: absolute;
-
-  display: grid;
-  grid-template-rows: 100px 96px 96px 96px 60px;
-  grid-template-columns: 247px 88px 242px;
-
   background-color: white;
   box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
   border-radius: 30px;
+
+  display: grid;
+  grid-template:
+    "header header" 100px
+    "from from" 1fr
+    "to to" 1fr
+    "adults children" 1fr
+    "find find" auto / auto auto;
+  column-gap: 86px;
 }
 .modal-window h2 {
-  margin: 0 0 auto;
-  grid-column: 1 / -1;
+  grid-area: header;
+  margin: 0;
 }
 
 /*кнопка закрытия формы*/
@@ -1330,33 +1387,43 @@ input {
 }
 
 /*поля ввода*/
-.modal-window fieldset {
-  grid-column: 1 / -1;
+.modal-window .field {
   border: none;
   margin: 0;
   padding: 0;
 
   display: grid;
-  grid-template-rows: 48px 48px;
-  grid-template-columns: 137px auto;
+  grid-template:
+    "header input" 48px
+    ". validation" max-content / 137px 1fr;
+  gap: 4px 0;
   align-items: center;
 }
-.modal-window fieldset.count-adults {
-  grid-column: 1/2;
+.modal-window .date-from {
+  grid-area: from;
 }
-.modal-window fieldset.count-children {
-  grid-column: 3/4;
-  grid-template-columns: 131px auto;
+.modal-window .date-to {
+  grid-area: to;
+}
+.modal-window .count-adults {
+  grid-area: adults;
+}
+.modal-window .count-children {
+  grid-area: children;
+  grid-template-columns: max-content 1fr;
+  gap: 4px 46px;
   position: relative;
 }
 .modal-window h3 {
+  grid-area: header;
+  margin: 0;
+
   /*font*/
   color: var(--color-text-basic);
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
   text-transform: capitalize;
-  margin: 0 0 0 0;
 }
 .modal-window input::placeholder {
   color: var(--color-text-basic);
@@ -1364,60 +1431,40 @@ input {
 }
 
 /*поля даты*/
-/*в рамках данного курса не буду кастомизировать элемент*/
-/*изменила его на text, чтобы было как в макете*/
-/* .modal-window input[type="date"] { */
-.modal-window input[type="text"] {
-  height: 48px;
+.modal-window .input-date {
+  grid-area: input;
   padding: 12px 20px;
-  box-sizing: border-box;
-  grid-column: 2/-1;
-  font-weight: 700;
-
-  /* background-color: var(--color-form-element-2); */
   border: none;
-  /* -webkit-datetime-edit-text: "."; */
+
   background: url("../images/icons-common-calendar.svg") right 20px center
       no-repeat,
     var(--color-form-element-2);
+  font-weight: 700;
 }
-/* .modal-window input[type="date"]::-webkit-calendar-picker-indicator {
-  width: 20px;
-  height: 20px;
-  box-sizing: border-box;
-  background: url("../images/icons-common.svg") -100px 0 no-repeat;
-} */
-/* .modal-window input[type="date"]:hover { */
-.modal-window input[type="text"]:hover {
+.modal-window .input-date:hover {
   background-color: var(--color-form-element-2-hover);
 }
-/* .modal-window input[type="date"]:focus-visible { */
-.modal-window input[type="text"]:focus-visible {
+.modal-window .input-date:focus-visible {
   background-color: var(--color-form-element-2-hover);
   outline: 3px solid #83b3d3;
 }
 @supports not selector(:focus-visible) {
-  /* .modal-window input[type="date"]:focus { */
-  .modal-window input[type="text"]:focus {
+  .modal-window .input-date:focus {
     background-color: var(--color-form-element-2-hover);
     outline: 3px solid #83b3d3;
   }
 }
-/* .modal-window input[type="date"]:active { */
-.modal-window input[type="text"]:active {
+.modal-window .input-date:active {
   background-color: var(--color-form-element-2);
   outline: 2px solid #000000;
 }
 
 /*поля количества человек*/
 .modal-window .input-group {
-  height: 48px;
-  width: 100%;
-  /* width: 111px; */
-  padding: 14px 10px;
-  box-sizing: border-box;
-  grid-column: 2/-1;
+  grid-area: input;
+  padding: 10px;
   display: flex;
+  align-items: center;
 
   background-color: var(--color-form-element-2);
   color: var(--color-text-basic);
@@ -1486,9 +1533,11 @@ input {
 /*валидация полей и подсказки*/
 .modal-window .verification,
 .modal-window .error {
-  grid-column: 2/-1;
+  grid-area: validation;
+  margin: 0 20px 0;
+  min-height: 44px;
   align-self: start;
-  margin: 4px 20px;
+
   font-size: 16px;
   line-height: 21px;
 }
@@ -1501,7 +1550,7 @@ input {
 .modal-window .tooltip {
   width: 26px;
   height: 26px;
-  margin: 0 10px 0;
+  margin-left: 10px;
 }
 .modal-window .info {
   /* position: absolute; */
@@ -1545,13 +1594,13 @@ input {
 
 /*кнопка "найти"*/
 .find-modal-window {
+  grid-area: find;
   height: 60px;
-  grid-column: 1/-1;
   border-radius: 10px;
+  background-color: var(--color-icon-second);
 
   font-size: 20px;
   line-height: 24px;
-  background-color: var(--color-icon-second);
 }
 .find-modal-window:hover,
 .find-modal-window:focus {
