--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,12 +12,12 @@ Summary:
     - flex-wrap
 + Гриды
 + изменить padding у select-элемента: скрывает часть текста
-- сделать состояния
-  - каталог
++ сделать состояния
+  + каталог
     + хлебные крошки
     + radio, checkbox
     + input - number
-    - бегунки range-элемента
+    + бегунки range-элемента
     + кнопка "примерить"
     + кнопка "сбросить"
   + модальное окно
@@ -28,7 +28,7 @@ Summary:
     + tooltip про детей
     + кнопка "найти"
 + расположить элементы модального окна
-- дописать range-элемент
++ дописать range-элемент
 + outline при фокусе НЕ УБИРАТЬ!
   + заменить бордеры на outline
   + убрать кастомный outline там, где стайлгайд не предусматривает его в браузерном фокусе
@@ -86,14 +86,14 @@ Summary:
 /*
 9.18. Завершаем вёрстку всех компонентов (https://up.htmlacademy.ru/htmlcss/35/tasks/14, 31 октября)
 
-- Сверстайте все оставшиеся компоненты, которые ещё не свёрстаны на ваших страницах:
++ Сверстайте все оставшиеся компоненты, которые ещё не свёрстаны на ваших страницах:
   + Модальные окна
   + стилизация модального окна
   + Поповеры
   + Формы
   + Слайдеры
   + Чекбоксы и радио-кнопки
-  - Range-слайдеры
+  + Range-слайдеры
 */
 
 /*
