--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,28 +10,6 @@ Summary:
 - Переполнение
     - использовать минимальную и максимальную высоту вместо просто высоты
     - flex-wrap
-+ Гриды
-+ изменить padding у select-элемента: скрывает часть текста
-+ сделать состояния
-  + каталог
-    + хлебные крошки
-    + radio, checkbox
-    + input - number
-    + бегунки range-элемента
-    + кнопка "примерить"
-    + кнопка "сбросить"
-  + модальное окно
-    + кнопка "закрыть"
-    + поля даты
-    + валидация
-    + кнопки "добавить", "убавить"
-    + tooltip про детей
-    + кнопка "найти"
-+ расположить элементы модального окна
-+ дописать range-элемент
-+ outline при фокусе НЕ УБИРАТЬ!
-  + заменить бордеры на outline
-  + убрать кастомный outline там, где стайлгайд не предусматривает его в браузерном фокусе
 */
 
 /*
@@ -56,7 +34,7 @@ Summary:
 */
 
 /*
-7.24. Постройте мелкие сетки на гридах для подходящих компонентов (https://up.htmlacademy.ru/htmlcss/35/tasks/12, 20 октября)
++7.24. Постройте мелкие сетки на гридах для подходящих компонентов (https://up.htmlacademy.ru/htmlcss/35/tasks/12, 20 октября)
 
 + В форке вашего проекта создайте сетку на гридах для компонентов, которым это подходит, например:
   + товары в каталоге или
@@ -68,7 +46,7 @@ Summary:
 */
 
 /*
-8.24. Декоративные элементы всех страниц (https://up.htmlacademy.ru/htmlcss/35/tasks/13, 27 октября)
++8.24. Декоративные элементы всех страниц (https://up.htmlacademy.ru/htmlcss/35/tasks/13, 27 октября)
 
 + Оформите декоративные элементы.
 
@@ -84,7 +62,7 @@ Summary:
 */
 
 /*
-9.18. Завершаем вёрстку всех компонентов (https://up.htmlacademy.ru/htmlcss/35/tasks/14, 31 октября)
++9.18. Завершаем вёрстку всех компонентов (https://up.htmlacademy.ru/htmlcss/35/tasks/14, 31 октября)
 
 + Сверстайте все оставшиеся компоненты, которые ещё не свёрстаны на ваших страницах:
   + Модальные окна
