--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,36 +7,6 @@ Summary:
 5. modal-window
 */
 
-/*
-+ Переполнение
-    + использовать минимальную и максимальную высоту вместо просто высоты
-    + flex-wrap
-
-    + пункты меню в навигации
-    + список социальных сетей
-    + карточки товара
-+ favicon (логотип вкладки в браузере)
-+ браузеры (особенно Edge)
-- другие критерии
-*/
-
-/*
-10.17. Проверяем макет по критериям (https://up.htmlacademy.ru/htmlcss/35/regulations)
-
-Проверьте макет
-- на соответствие критериям
-+ PixelPerfect
-+ Валидатор
-*/
-
-/*
-Дедлайн 7 ноября - выполнен, поздравляю!
-
-Осталась неделя на проверку критериев и сдачу:
-отправка на проверку доступна с 24 октября по 16 ноября
-отправка на повторную проверку по 21 ноября
-*/
-
 :root {
   --color-text-basic: #000000;
   --color-text-second: #333333;
@@ -130,19 +100,22 @@ main {
   flex-grow: 1;
 }
 
-h1 {
+.main-page h1,
+.catalog h1 {
   font-weight: 700;
   font-size: 60px;
   line-height: 78px;
 }
-h2 {
+.main-page h2,
+.catalog h2 {
   color: var(--color-text-basic);
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
 }
-h3 {
+.main-page h3,
+.catalog h3 {
   color: var(--color-text-basic);
   font-weight: 700;
   font-size: 24px;
@@ -158,7 +131,8 @@ a {
   color: inherit;
 }
 
-button {
+.main-page button,
+.catalog button {
   /*font*/
   font-family: "PTSans", Arial, Helvetica, sans-serif;
   color: var(--color-text-background-default);
@@ -174,7 +148,8 @@ button {
   border-radius: 4px;
 }
 
-input {
+.main-page input,
+.catalog input {
   font-family: "PTSans", Arial, Helvetica, sans-serif;
   color: #000000;
   font-weight: 400;
@@ -224,7 +199,7 @@ input {
   text-transform: capitalize;
 }
 .main-nav-left a[href]:hover::after,
-.main-nav-left a.active::after {
+.main-nav-left a:not([href]):after {
   content: "";
   position: absolute;
   left: 0;
@@ -324,6 +299,8 @@ input {
   display: flex;
   justify-content: space-around;
 }
+/*три уровня вложенности, т.к. нужно изменить цвет svg в состоянии ссылки*/
+/*первый без состояний по аналогии тоже тройной*/
 .social a svg {
   fill: var(--color-icon-second);
 }
@@ -383,9 +360,11 @@ input {
   color: var(--color-text-second);
 }
 .main-page .subscribe {
-  background: url("../images/background-subscribe.jpg") no-repeat;
+  background: var(--color-background-basic-3)
+    url("../images/background-subscribe.jpg") no-repeat;
   background-size: cover;
 }
+/*три уровня вложенности т.к. элементы блока subscribe стилизуются именно на главной странице*/
 .main-page .subscribe h2 {
   color: var(--color-text-background-default);
 }
@@ -531,9 +510,10 @@ input {
 .features-list.reverse {
   flex-direction: row-reverse;
 }
+/*три уровня вложенности т.к. стилизуется элемент в конкретном варианте: alone, multiple, etc*/
 /*.features-list.alone*/
 .features-list.alone div {
-  background-color: var(--color-background-basic-3);
+  background: var(--color-background-basic-3);
 }
 .features-list.alone h3,
 .features-list.alone p {
@@ -544,13 +524,13 @@ input {
 }
 /*.features-list.multiple*/
 .features-list.multiple div {
-  background-color: var(--color-background-second-1);
+  background: var(--color-background-second-1);
 }
 .features-list.multiple div:nth-child(even) {
-  background-color: var(--color-background-second-2);
+  background: var(--color-background-second-2);
 }
 .features-list.multiple:last-child div:nth-child(2) {
-  background-color: inherit;
+  background: inherit;
 }
 /*icons*/
 .features-list.with-icons div {
@@ -637,7 +617,8 @@ input {
   flex-direction: column;
 
   color: var(--color-text-background-default);
-  background: url("../images/background-result.jpg") no-repeat;
+  background: var(--color-background-basic-3)
+    url("../images/background-result.jpg") no-repeat;
   background-size: cover;
 }
 .filter h1 {
@@ -739,6 +720,7 @@ input {
     outline: 3px solid var(--color-icon-second);
   }
 }
+/*три уровня вложенности т.к. требуется указать состояние label*/
 .filter label:not(:focus) input[type="checkbox"]:active,
 .filter label:not(:focus) input[type="radio"]:active {
   opacity: 30%;
@@ -1397,6 +1379,7 @@ input {
 .modal-window .input-group:hover {
   background-color: var(--color-form-element-2-hover);
 }
+/*три уровня вложенности т.к. стилизуется элемент именно в составе группы волей ввода*/
 .modal-window .input-group input {
   flex-grow: 1;
   width: 28px;
@@ -1422,6 +1405,7 @@ input {
 }
 
 /*кнопки "-" и "+"*/
+/*три уровня вложенности т.к. стилизуются именно svg в кнопка +/- и именно в модальном окне*/
 .modal-window .minus,
 .modal-window .plus {
   min-width: 20px;
